<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">
<!--    app:startDestination="@+id/nav_home"-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.kodego.app.inventory.app.orgino.restoup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_take_an_order"
        android:name="com.kodego.app.inventory.app.orgino.restoup.ui.take_an_order.TakeAnOrderFragment"
        android:label="@string/menu_take_an_order"
        tools:layout="@layout/fragment_take_an_order" />

    <fragment
        android:id="@+id/nav_order_queue"
        android:name="com.kodego.app.inventory.app.orgino.restoup.ui.order_queue.OrderQueueFragment"
        android:label="@string/menu_order_queue"
        tools:layout="@layout/fragment_order_queue" />
    <fragment
        android:id="@+id/nav_customer_checkout"
        android:name="com.kodego.app.inventory.app.orgino.restoup.ui.customer_checkout.CustomerCheckoutFragment"
        android:label="@string/menu_customer_checkout"
        tools:layout="@layout/fragment_home"/>
</navigation>