<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.PopupOverlay">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:theme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/tvSignUpHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="258dp"
                    android:text="@string/sign_up_header"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme.PopupOverlay" />

                <TextView
                    android:id="@+id/tvSignUpMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="258dp"
                    android:text="@string/sign_up_message"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/etSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:theme="@style/AppTheme.PopupOverlay" />

                <EditText
                    android:id="@+id/etSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:theme="@style/AppTheme.PopupOverlay" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme.PopupOverlay">

                    <Button
                        android:id="@+id/btnSignUpCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:theme="@style/AppTheme.PopupOverlay" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:theme="@style/AppTheme.PopupOverlay" />

                    <Button
                        android:id="@+id/btnSignUpConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_up"
                        android:theme="@style/AppTheme.PopupOverlay" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>